--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "iconoir-react": "^7.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^7.4.0",
     "sass": "^1.85.0"
   }
